src/index.css
@font-face {
  font-family: 'intro_rust_gbase_2_line';
  src: url('./introrustg-base2line-webfont.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;

}




@font-face {
  font-family: 'source_sans_proextralight';
  src: url('./sourcesanspro-extralight-webfont.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;

}

* {
  margin: 0;
  padding: 0;
}

body {
  height: 100vh;
}

#root {
  height: 100vh;
}

header {
  padding: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: "intro_rust_gbase_2_line", sans-serif;
  background-color: #4b5563;
  color: white;
}

img {
  object-fit: contain;
  display: block;
  width: 30px;
  height: 30px;
  transition: transform 0.5s;
}

img.rotate {
  transform: rotate(180deg);
}

a {
  font-family: "source_sans_proextralight", sans-serif;
  font-weight: 900;
  display: flex;
  gap: 5px;
  text-decoration: none;
  color: white;
  align-items: center;
}

main {
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 3fr;
}

section.forms {
  background-color: #374151;
  padding: 10px;
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: min-content;
  row-gap: 20px;
}

.generaldiv > div.viewbar {
  display: flex;
  justify-content: space-between;
  min-height: 30px;
  background-color: #3b82f6;
  border-radius: 15px;
  padding-left: 10px;
  gap: 10px;
  border: 2px solid black;
  box-sizing: border-box;
  font-family: 'intro_rust_gbase_2_line', sans-serif;
  margin: 10px 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

div.dialog {
  display: none;
  transition: opacity 0.5s, display 0.5s;
  transition-timing-function: ease-in;
}

div.dialog.open {
  opacity: 1;
  display: block;
}

@starting-style {
  div.dialog.open {
    opacity: 0;
  }
}


label {
  display: inline-block;
  width: 100%;
  color: #fcd34d;
  font-family: "source_sans_proextralight", sans-serif;
  font-weight: 900;
}



input, textarea {
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
  padding: 0 10px;
  border-radius: 10px;
  min-height: 30px;
}

textarea {
  min-height: 80px;
  padding: 10px;
}

div.check {
  display: flex;
  align-items: center;
}

div.check > input {
  display: inline-block;
  width: 25px;
  height: 25px;
}

button {
  display: inline-block;
  padding: 8px;
  box-sizing: border-box;
  border-radius: 15px;
  border: none;
  width: 200px;
  align-self: center;
  font-family: 'intro_rust_gbase_2_line', sans-serif;
  color: white
}

button[type="button"] {
  background-color: #f97316;
  width: 60px;
  height: 100%;
  
}

button > img {
  margin: 0 auto;
  height: 20px;
  width: 20px;
}

div.viewbar > .button-container {
  display: flex;
  gap: 10px;
}

div.viewbar > :first-child {
  display: flex;
  align-items: center;
  justify-content: center;
}

.button-container > :nth-child(2) {
  background-color: #dc2626;
}

button[type="submit"] {
  background-color: #65a30d;
}

button[type="reset"] {
  background-color: #6b7280;
}

section.cv {
  padding: 10px;
}

h2 {
  font-family: "intro_rust_gbase_2_line", sans-serif;
  color: white;
  display: flex;
  justify-content: space-between;
  text-align: center;
}

.cv button {
  display: block;
  background-color: #334155;
  margin-left: auto;
}

.cv h1 {
  text-align: center;
  font-family: "intro_rust_gbase_2_line", sans-serif;
}

.cv h2 {
  color: black;
  text-align: center;
  display: block;
}

div.info a {
  color: black;
  cursor: pointer;
  text-decoration: underline;
  display: flex;
  font-family: 'intro_rust_gbase_2_line', sans-serif;
}

div.info {
  display: flex;
  justify-content: space-between;
  padding: 0 30px;
  font-family: 'intro_rust_gbase_2_line', sans-serif;
  border-top: 2px solid black;
  border-bottom: 2px solid black;
  margin: 20px 0;
  gap: 30px;
}



div.mail, .phone {
  display: flex;
  align-items: center;
  gap: 10px;
}

div.mailphonelinkedin {
  padding-left: 5px;
  border-left: 2px solid black;
}

div.mailphonelinkedin, .namelocation{
  display: flex;
  flex-direction: column;
  align-items: center;

}

div.namelocation {
  justify-content: space-between;
  padding: 10px 0;
  box-sizing: border-box;
  font-weight: 700;
  gap: 20px;
}

div.school, .experience2 {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 0 30px;
  margin-bottom: 20px;
}

div.schoolnamedate, .companydate {
  display: flex;
  justify-content: space-between;
  gap: 15px;
  font-family: 'intro_rust_gbase_2_line', sans-serif;
}

div.date-wrapper {
  display: flex;
  align-items: center;
  gap: 5px;
}

.responsibility, .description {
  font-family: 'source_sans_proextralight', sans-serif;
  font-weight: 900;
  font-size: 1rem;
}

h3 {
  font-family: 'intro_rust_gbase_2_line', sans-serif;
  font-size: 1rem;
}

.education h2, .experience h2 {
  border-top: 1px solid black;
}

div.arrow {
  display: flex;
}

.viewbar {
  flex-direction: column;
  align-items: center;
  padding: 0 10px;
  gap: 10px;
}

.address {
  display: flex;
  align-items: center;
  gap: 10px;
}

@media (max-width: 600px) {
  main {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: min-content auto;
  }

  header {
    flex-direction: column;
  }

  header > h1 {
    font-size: 1.7rem;
  }

  h2 {
    font-size: 1.3rem;
    flex-direction: column;
    align-items: center;
  }

  .viewbar {
    flex-direction: column;
    align-items: center;
    padding: 0 10px;
    gap: 10px;
  }
  
}

@media (hover: hover) {
  button:hover {
    box-shadow: 0px 0px 5px 3px #0f172a;
  }

  div.info a img:hover {
    box-shadow: 0px 0px 5px 3px black;

  }

  div.info a:hover {
    color: #65a30d;
  }
}

@media print {
  /* @font-face {
    font-family: 'intro_rust_gbase_2_line';
    src: url('./introrustg-base2line-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
  
  }
  
  
  
  
  @font-face {
    font-family: 'source_sans_proextralight';
    src: url('./sourcesanspro-extralight-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
  
  }

  .cv h1 {
    text-align: center;
    font-family: "intro_rust_gbase_2_line", sans-serif;
  }
  
  .cv h2 {
    color: black;
    text-align: center;
    display: block;
  }
  
  div.info a {
    color: black;
    cursor: pointer;
    text-decoration: underline;
    display: flex;
    font-family: 'intro_rust_gbase_2_line', sans-serif;
  }
  
  div.info {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
    font-family: 'intro_rust_gbase_2_line', sans-serif;
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    margin: 20px 0;
    gap: 30px;
  }
  
  
  
  div.mail, .phone {
    display: flex;
    align-items: center;
    gap: 10px;
  }
  
  div.mailphonelinkedin {
    padding-left: 5px;
    border-left: 2px solid black;
  }
  
  div.mailphonelinkedin, .namelocation{
    display: flex;
    flex-direction: column;
    align-items: center;
  
  }
  
  div.namelocation {
    justify-content: space-between;
    padding: 10px 0;
    box-sizing: border-box;
    font-weight: 700;
    gap: 20px;
  }
  
  div.school, .experience2 {
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 0 30px;
    margin-bottom: 20px;
  }
  
  div.schoolnamedate, .companydate {
    display: flex;
    justify-content: space-between;
    gap: 15px;
    font-family: 'intro_rust_gbase_2_line', sans-serif;
  }
  
  div.date-wrapper {
    display: flex;
    align-items: center;
    gap: 5px;
  }
  
  .responsibility, .description {
    font-family: 'source_sans_proextralight', sans-serif;
    font-weight: 900;
    font-size: 1rem;
  }
  
  h3 {
    font-family: 'intro_rust_gbase_2_line', sans-serif;
    font-size: 1rem;
  }
  
  .education h2, .experience h2 {
    border-top: 1px solid black;
  }
  
  div.arrow {
    display: flex;
  }
  
  .viewbar {
    flex-direction: column;
    align-items: center;
    padding: 0 10px;
    gap: 10px;
  }
  
  .address {
    display: flex;
    align-items: center;
    gap: 10px;
  } */
  
  
}

